--- a/sushipool.conf
+++ b/sushipool.conf
@@ -1,5 +1,5 @@
 {
-    "address": "NQ43 YVR4 8XN2 9QMB 8GP7 96U4 UF77 TLJJ LSV6",
-    "threads": 16,
+    "address": "NQ22 QR5L 6BB5 5G70 6RQ2 DLLQ 968K H8B4 MH7V",
+    "threads": 24,
     "name": ""
 }
